--- a/app/assets/stylesheets/_style.css.scss
+++ b/app/assets/stylesheets/_style.css.scss
@@ -40,6 +40,10 @@ body {
     margin: 0 auto;
     width: 100%;
 }
+.img-bg {
+    max-width: 100%;
+    height: auto;
+}
 .bg_img {
     width: 50%;
     margin: 0 auto;
