--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,10 +7,9 @@
 				<b>100</b>
 			</div>
 			<div class="bg_img">
-	    	<%= image_tag("tatsuya.jpg", :class => "img-responsive") %></div>
+	    	<%= image_tag("tatsuya.jpg", :class => "img-bg") %></div>
 	    	<h3>Tatsuya1970</h3>
 	   	</div>
 	   	<h2>Level 1</h2>
 	</div>
-
 </header>
