--- a/app/assets/stylesheets/_style.css.scss
+++ b/app/assets/stylesheets/_style.css.scss
@@ -32,7 +32,7 @@ body {
     font-size: 48px;
 }
 .header h2 {
-    padding: 2em 0 0 0;
+    padding: 2em 0 3em 0;
     font-size: 38px;
 }
 .image_on_bg {
